--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,5 @@ go:
   - 1.3
   - tip
 
-before_install:
-  - export PATH=/home/travis/gopath/bin:$PATH
-
-install: make deps
-
 script:
-  - godep go test
+  - go test
